# hackernotes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/hackernotes/: main.py
src/hackernotes/cli/: __init__.py  ai.py  aliases.py  annotation.py  db.py  general.py  graph.py  init.py  note.py  workspace.py
src/hackernotes/core/: ai.py  annotations.py  interactive.py  note.py  snippet.py  types.py  workspace.py
src/hackernotes/core/annotations/: __init__.py  annotation.py  entity.py  tag.py
src/hackernotes/core/note/: __init__.py  meta.py  note.py
src/hackernotes/core/snippets/: __init__.py  snippet.py
src/hackernotes/db/: __init__.py  models.py  query.py  schema.py
src/hackernotes/utils/: __init__.py  config.py  datetime.py  display.py  llm.py  parsers.py  system.py  term.py
tests/: annotations.py  note.py  workspace.py
