[project]
name = "hackernotes"
version = "0.1.0"
description = "Hacker Notes - GenAI-supported note-taking via Terminal"
authors = [
    {name = "kulasinski",email = "kulasinski@gmail.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
