[project]
name = "hackernotes"
version = "0.1.0"
description = "Hacker Notes - GenAI-supported note-taking via Terminal"
authors = [
    {name = "kulasinski",email = "kulasinski@gmail.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.6"
black = "^25.1.0"
alembic = "^1.15.2"

[tool.poetry.scripts]
hn = "hackernotes.main:main"

